# DirectBA

./: CMakeLists.txt  DataIO.cpp  DataIO.h  DataStructure.h  ImgUlti.cpp  ImgUlti.h  MathUlti.cpp  MathUlti.h  Visualization.cpp  Visualization.h  main - Copy.cpp  main.cpp  main_092616.cpp  main_BK160616_work for all rocks.cpp  main_StairsWork.cpp  main_WritingCostfunction2fuctor.cpp  main_bk.cpp  main_bk.txt
